--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,5 @@
 @import "aboutme";
 @import "footer";
 @import "./components/feature-box";
+@import "./components/card";
+@import "./components/button";
