--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -24,6 +24,7 @@
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 7rem;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); // The card width is 35rem
+  grid-gap: 5rem 3rem;
+  justify-items: center;
 }
