--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -4,6 +4,7 @@
     -moz-perspective: 150rem;
     position: relative;
     height: 45rem;
+    width: 32rem;
 
     &__side {
         position: absolute;
@@ -19,7 +20,22 @@
         box-shadow: $box-shadow-medium;
 
         &--front {
-            // background-color: $color-white;
+            background-color: #fff;
+
+            &-more {
+              font-size: 2.5rem;
+              font-family: $font-display;
+              font-weight: 700;
+              display: grid;
+              grid-template-columns: 1fr;
+              grid-template-rows: auto auto;
+              justify-content: center;
+              align-content: center;
+              color: $color-pink-dark;
+              box-sizing: border-box;
+              align-items: center;
+              justify-items: center;
+            }
         }
 
         &--back {
@@ -29,6 +45,16 @@
 
             &-natour {
               background-image: linear-gradient(to right bottom, #000, $natours-color-primary-dark);
+            }
+
+            &-more {
+              font-size: 2.3rem;
+              font-weight: 700;
+              font-style: italic;
+              display: flex;
+              align-items: center;
+              text-align: center;
+              color: $color-grey-dark-1;
             }
         }
     }
@@ -124,19 +150,19 @@
     }
 
 
-    &__price-box {
+    &__cta-detail {
         color: #fff;
         margin-bottom: 2rem;
     }
 
 
-    &__price-only {
+    &__cta-desc {
         font-size: $default-font-size;
         text-transform: uppercase;
     }
 
 
-    &__price-value {
+    &__cta-link {
         font-size: 3rem;
         font-weight: 700;
         font-family: $font-display;
@@ -154,7 +180,7 @@
           &:hover {
             transform: skewY(1deg) skewX(10deg) scale(1.1);
             text-shadow: $box-shadow-small;
-        }
+          }
         }
     }
 
@@ -199,11 +225,11 @@
         }
 
 
-        &__price-box {
+        &__cta-detail {
             margin-bottom: 3rem;
         }
 
-        &__price-value {
+        &__cta-link {
             font-size: 6rem;
         }
     }
