--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,15 @@
 .header {
-  background-color: $color-grey-dark-1;
   grid-column: full-start / col-end 6;
+
+  background-image: 
+    linear-gradient(to right bottom, rgba(#fff, 1) 0%, rgba($color-primary-dark, 0.1) 100%),
+    url(../img/nam-photo-crop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top left;
+
+  &__logo {
+    width: 27rem;
+    height: 5.25rem;
+  }
 }
