--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -6,8 +6,15 @@
 .heading-1 {
   @extend %heading;
   font-size: 4.5rem;
-  color: $color-grey-dark-1;
   line-height: 1;
+
+  &--light {
+    color: $color-grey-light-1;
+  }
+
+  &--dark {
+    color: $color-grey-dark-1;
+  }
   
 }
 
@@ -45,7 +52,7 @@
 
 .heading-4 {
   @extend %heading;
-  font-size: 1.8;
+  font-size: 1.8rem;
   
 
   &--light {
