Added small adjustments and media-queries

--- a/css/style.css
+++ b/css/style.css
@@ -303,8 +303,22 @@ template {
 [hidden] {
   display: none; }
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  box-sizing: border-box; }
+  @media only screen and (max-width: 100em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (max-width: 37.5em) {
+    html {
+      font-size: 37.5%; } }
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -317,6 +331,13 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content min-content repeat(2, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 75em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content min-content repeat(2, min-content);
+      grid-template-columns: [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 56.25em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem - 25rem) min-content min-content min-content repeat(2, min-content); } }
 
 .txt-type {
   font-style: italic;
@@ -365,6 +386,10 @@ body {
   background-color: #B28451;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1; }
+  @media only screen and (max-width: 75em) {
+    .sidebar {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2; } }
 
 .header {
   grid-column: full-start / col-end 6;
@@ -374,8 +399,12 @@ body {
   background-position: center;
   padding: 0 3rem;
   display: grid;
+  grid-template-columns: minmax(min-content, max-content);
   grid-template-rows: repeat(2, min-content);
   align-content: center; }
+  @media only screen and (max-width: 56.25em) {
+    .header {
+      grid-column: 1 / -1; } }
   .header__logo {
     width: 27rem;
     height: 5.25rem;
@@ -389,11 +418,19 @@ body {
   display: grid;
   align-content: center;
   justify-content: center; }
+  @media only screen and (max-width: 56.25em) {
+    .top-3-projects {
+      grid-column: 1 / -1;
+      grid-row-gap: 2rem;
+      height: 25rem; } }
   .top-3-projects__list {
     display: grid;
     grid-template-columns: min-content max-content;
     grid-gap: 5vh 2rem;
     align-items: center; }
+    @media only screen and (max-width: 56.25em) {
+      .top-3-projects__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
   .top-3-projects__image {
     width: 7rem;
     height: 7rem;
@@ -424,9 +461,12 @@ body {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
   grid-gap: 5rem 3rem;
   justify-items: center; }
+  @media only screen and (hover: none) {
+    .projects {
+      grid-template-columns: repeat(auto-fit, minmax(64rem, 1fr)); } }
 
 .skills {
   grid-column: full-start / full-end;
@@ -439,6 +479,9 @@ body {
   grid-column: full-start / col-end 4;
   background-image: linear-gradient(rgba(246, 252, 220, 0.7), #f9f7f6), url(../img/about-me-bg.jpg);
   padding: 4.5rem 10rem; }
+  @media only screen and (max-width: 56.25em) {
+    .aboutme__intro {
+      grid-column: 1 / -1; } }
   .aboutme__intro__text {
     font-size: 1.6rem;
     color: #101d2c; }
@@ -452,6 +495,9 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 2rem; }
+  @media only screen and (max-width: 56.25em) {
+    .aboutme__contact-info {
+      grid-column: 1 / -1; } }
   .aboutme__contact-info__section {
     display: grid;
     grid-template-columns: min-content max-content;
@@ -471,6 +517,9 @@ body {
     background-repeat: repeat-x;
     background-size: .3rem .3rem;
     transition: all .2s; }
+    @media only screen and (max-width: 75em) {
+      .aboutme__contact-info__url {
+        font-size: 2.5rem; } }
     .aboutme__contact-info__url:hover {
       background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%2309079c' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
       background-position: 0 100%;
@@ -481,8 +530,8 @@ body {
 
 .footer {
   background-color: #fcfef3;
-  grid-row: 5 / -1;
-  grid-column: full-start / full-end; }
+  grid-column: full-start / full-end;
+  grid-row-start: 9999; }
 
 .copyright {
   font-size: 1.4rem;
@@ -511,6 +560,11 @@ body {
   position: relative;
   height: 45rem;
   width: 32rem; }
+  @media only screen and (hover: none) {
+    .card {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      width: 64rem; } }
   .card__side {
     position: absolute;
     top: 0;
@@ -636,8 +690,7 @@ body {
         overflow: hidden;
         box-shadow: none; }
         .card__side--back {
-          transform: rotateY(0);
-          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+          transform: rotateY(0); }
       .card:hover .card__side--front {
         transform: rotateY(0); }
       .card__details {
@@ -652,7 +705,8 @@ body {
       .card__cta-detail {
         margin-bottom: 3rem; }
       .card__cta-link {
-        font-size: 6rem; } }
+        margin-top: 1rem;
+        font-size: 3rem; } }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
