--- a/sass/_aboutme.scss
+++ b/sass/_aboutme.scss
@@ -1,6 +1,11 @@
 .aboutme {
   &__intro {
     grid-column: full-start / col-end 4;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+    }
+
     background-image:
       linear-gradient(rgba($color-primary, .7), rgba($color-grey-light-1, 1)),
       url(../img/about-me-bg.jpg);
@@ -14,6 +19,10 @@
 
   &__contact-info {
     grid-column: col-start 5 / full-end;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+    }
 
     // background-color: darken($color-grey-light-1, 5%);
     background-image: 
@@ -52,6 +61,10 @@
       background-size: .3rem .3rem;
 
       transition: all .2s;
+
+      @media only screen and (max-width: $bp-large) {
+        font-size: 2.5rem;
+      }
 
       &:hover {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%2309079c' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
