--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,5 +1,11 @@
 .top-3-projects {
   grid-column: col-start 7 / full-end;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+    grid-row-gap: 2rem;
+    height: 25rem;
+  }
   
   background-color: darken($color-secondary, 4%);
   padding: 5rem;
@@ -13,6 +19,10 @@
     grid-template-columns: min-content max-content;
     grid-gap: 5vh 2rem;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
   }
 
   &__image {
@@ -62,7 +72,11 @@
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); // The card width is 35rem
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr)); // The card width is 32rem
   grid-gap: 5rem 3rem;
   justify-items: center;
+
+  @media only screen and (hover:none) {
+    grid-template-columns: repeat(auto-fit, minmax(64rem, 1fr)); // The card width is 64rem
+  }
 }
