--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,6 +6,12 @@
     height: 45rem;
     width: 32rem;
 
+    @media only screen and (hover:none) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      width: 64rem;
+    }
+
     &__side {
         position: absolute;
         top : 0;
@@ -200,7 +206,6 @@
 
             &--back {
                 transform: rotateY(0);
-                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
             }
         }
 
@@ -230,7 +235,8 @@
         }
 
         &__cta-link {
-            font-size: 6rem;
+            margin-top: 1rem;
+            font-size: 3rem;
         }
     }
 
