--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 @import "base";
 @import "typography";
 
-@import "sidebar";
+@import "navbar";
 @import "header";
 @import "projects";
 @import "skills";
