--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -86,7 +86,7 @@ body {
   }
 
   @media only screen and (max-width: $bp-medium) {
-    grid-template-rows: 6rem calc(100vh - 6rem - 25rem) min-content min-content min-content repeat(2, min-content);
+    grid-template-rows: calc(65vh) min-content min-content min-content repeat(2, min-content);
   }
 
   @media only screen and (max-width: $bp-large) {
