--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,18 +1,19 @@
 .top-3-projects {
   grid-column: col-start 7 / full-end;
 
-  @media only screen and (max-width: $bp-medium) {
-    grid-column: 1 / -1;
-    grid-row-gap: 2rem;
-    height: 25rem;
-  }
-  
   background-color: darken($color-secondary, 4%);
   padding: 5rem;
 
   display: grid;
   align-content: center;
   justify-content: center;
+  grid-gap: 2rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+    grid-row-gap: 2rem;
+  }
+  
 
   &__list {
     display: grid;
@@ -21,7 +22,7 @@
     align-items: center;
 
     @media only screen and (max-width: $bp-medium) {
-      grid-template-columns: repeat(3, min-content max-content);
+      grid-template-rows: repeat(3, min-content);
     }
   }
 
